--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=springMVC
 
-
 # MYSQL CONNEXION
-
 spring.datasource.url=jdbc:mysql://localhost:3306/firstdb
 spring.datasource.username=root
 spring.datasource.password=1234
@@ -12,3 +10,7 @@ spring.jpa.show-sql=true
 spring.liquibase.enabled=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=10
+
+# PATH AND VARIABLE
+
+file.upload.path=src/main/resources/static/images/
