Ajout furniture flux + automatic script + pagination

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.liquibase.enabled=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=10
 
-# PATH AND VARIABLE
+# LAUNCH SCRIPT
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.data=classpath:data.sql
+spring.sql.init.mode=always
 
+# PATH AND VARIABLE
 file.upload.path=src/main/resources/static/images/
